fix woof align + add lastfm link

--- a/style.css
+++ b/style.css
@@ -34,9 +34,8 @@ a:active {
 .bottomright {
     align-items:right;
     text-align:right;
-    display:flex;
-    min-width:99vw;
     flex-direction: column;
     position: absolute;
     bottom:10px;
+    right:10px;
 }
